// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SheetComponent/> Tests Render Tests should render editable sheet by snapshot 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-wrapper"
  >
    <div
      class="antv-s2-container"
      style="position: relative;"
    >
      <canvas
        height="400"
        style="width: 200px; height: 200px; touch-action: none; display: block; user-select: none;"
        width="400"
      />
    </div>
    <div
      class="antv-s2-drag-copy-point"
      id="spreadsheet-drag-copy-point"
      style="display: none; left: -999px; top: -999px; width: 8px;"
    >
      <div
        class="antv-s2-drag-copy-mask"
        style="inset: 0px; width: 0px; height: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SheetComponent/> Tests Render Tests should render gridAnalysis sheet by snapshot 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-wrapper"
  >
    <div
      class="antv-s2-container"
      style="position: relative;"
    >
      <canvas
        height="400"
        style="width: 200px; height: 200px; touch-action: none; display: block; user-select: none;"
        width="400"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SheetComponent/> Tests Render Tests should render pivot sheet by snapshot 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-wrapper"
  >
    <div
      class="antv-s2-container"
      style="position: relative;"
    >
      <canvas
        height="400"
        style="width: 200px; height: 200px; touch-action: none; display: block; user-select: none;"
        width="400"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SheetComponent/> Tests Render Tests should render strategy sheet by snapshot 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-wrapper"
  >
    <div
      class="antv-s2-container"
      style="position: relative;"
    >
      <canvas
        height="400"
        style="width: 200px; height: 200px; touch-action: none; display: block; user-select: none;"
        width="400"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SheetComponent/> Tests Render Tests should render table sheet by snapshot 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-wrapper"
  >
    <div
      class="antv-s2-container"
      style="position: relative;"
    >
      <canvas
        height="400"
        style="width: 200px; height: 200px; touch-action: none; display: block; user-select: none;"
        width="400"
      />
    </div>
  </div>
</DocumentFragment>
`;
